@@ -1,3 +1,4 @@
+1/3/11 simplify sorting of properties
 1/3/11 #2624, add translation.credits property, for specifying translation credits
 9/20/10 #2492,#2497 move translationutility.jar to buildtools.jar, add dependency on build-tools
 9/20/10 #2492,#2497 migrate DocumentIO to phetcommon XMLUtils
